<resources>
    <string name="app_name">VacunAR</string>
    <string name="edit_message">Ingrese un mensaje</string>
    <string name="button_send">Enviar</string>
    <string name="edit_mail">Ingrese su correo</string>
    <string name="edit_password">Ingrese su contraseña</string>
    <string name="text_primera_vez">¿Aún no tiene su usuario?</string>
    <string name="buttonRegistrar">Registrarse</string>
    <string name="edit_dni">Ingrese su DNI</string>
    <string name="edit_nombre">Ingrese su nombre</string>
    <string name="edit_apellido">Ingrese su apellido</string>
    <string name="button_entrar">ENTRAR</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="text_completar_datos_reg">Complete sus datos para registrarse</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_jugar">Jugar</string>
    <string name="text_puntuacion">Puntuación:</string>
    <string name="text_felicitaciones">¡Felicitaciones!</string>
    <string name="text_dosis_aplicadas">Dosis aplicadas</string>
    <string name="LoginTitle">Iniciar sesión</string>
    <string name="text_pausa">¡Poca luz!</string>
    <string name="text_guardar_puntuacion">Guardar puntuación</string>
    <string name="edit_nombre_puntuacion">Ingrese un nombre</string>
    <string name="button_volver_menu">Volver al inicio</string>
    <string name="button_ver_puntuaciones">Ver puntuaciones</string>
    <string name="button_como_jugar">¿Cómo jugar?</string>
    <string name="title_activity_como_jugar">ComoJugarActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>